--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,11 @@
     left: 50%
 }
 
-@media (max-width:450px) {
+.before-navbar {
+    display: flex !important;
+}
+
+@media (max-width:500px) {
     .before-navbar {
         display: none !important;
     }
