--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,10 @@
 
 @media (max-width:500px) {
 
+    .wcard {
+        height: fit-content !important;
+    }
+
     .before-navbar {
         display: none !important;
     }
